fix news gap

--- a/blog/static/css/styles.css
+++ b/blog/static/css/styles.css
@@ -151,6 +151,10 @@ nav{
     .card-custom-blog{
         height: 300px !important;
     }
+    .post-container{
+        margin-inline: 0 0;
+    }
+
 
 }
 
